Updated some sections and made some formatting changes

--- a/Sections/Hardware.tex
+++ b/Sections/Hardware.tex
@@ -3,18 +3,10 @@
 
 \begin{figure}[!ht]
 \begin{center}
-\includegraphics[width=.75\textwidth]{./Figures/payload_1.jpg}
+\includegraphics[width=0.8\textwidth]{./Figures/duck.jpg}
 \caption{SolidWorks 3D CAD design of the SORA payload.}
 \label{fig:payload} 
 \end{center}
 \end{figure}
 
-The SORA 2.0 payload will have an upgraded and more efficient flight computer, a fully developed astrobiology system and a MiniPIX USB silicon-based hybrid-chip particle detector.  The astrobiology system will build upon the previous mission, but this time we are seeking to capture and culture any microorganisms we may find.  Our previous mission in 2017 confirmed that our astrobiology system functions well beyond expectations and that there are microorganisms in the upper atmosphere.
-
-\begin{figure}[!ht]
-\begin{center}
-\includegraphics[width=\textwidth]{./Figures/RESU_2018.pdf}
-\caption{Abstract subsystem design for SORA 2.0.}
-\label{fig:payload} 
-\end{center}
-\end{figure}
+SORA 3 will implement an overhauled astrobiology system that will collect larger samples of stratospheric organisms as well as require less amperage, allowing us to expand the radiation system and reduce the chance of electrical failure. The radiation system will apply the techniques developed over the previous missions by consisting of a scintillated MiniPIX within a pressurized module modelled after an ISS module. Additionally, various types of organic photovolatic cells will be flown in order to study their performance in harsh stratospheric conditions.
