--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -20,7 +20,7 @@ The upcoming mission has the following scientific objectives:
 	\begin{enumerate}
 	\item Capture microorganisms in the upper atmosphere at altitudes of approximately \SIrange{30}{41}{\kilo\meter} using a method not previously used by the UH HASP team. 
 	\item Culture samples and compare them to the collection medium.
-	\item Study the cosmic and terrestrial radiation to which extremophiles and astronauts are exposed to.
+	\item Study the cosmic and terrestrial radiation that extremophiles and astronauts are exposed to.
 	\end{enumerate}
 	
 {\bf Secondary Scientific Objectives:}
