--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -46,17 +46,18 @@
 	\item Attend monthly teleconferences.
 	\item Equipment procurement
 	\end{itemize}
-\item Project Leader - Samuel A. Garcia Morelos
+\item Project Leader - Reed Masek
 	\begin{itemize}
 	\item Interface with HASP Flight Control Team and act as team main point of contact
 	\item Compile monthly reports and submit to HASP
 	\item Attend monthly teleconference with HASP
 	\item Coordinate with PI on administration tasks and internal group business
-	\item Coordinate meetings and assign tasks with deadlines
+        \item Periodically check-in with team coordinators regarding the team's progress
+        \item Coordinate meetings and assign tasks with deadlines
 	\item Approve designs, tests, ideas, and any work related to HASP and payload
-	\item Final decisions on staffing (Staffing decisions will be a group decision overall)
+	\item Final decisions on staffing (staffing decisions will be a group decision overall)
 	\end{itemize}
-\item Electronics and Communications Coordinator - Andrew Walker
+\item Electronics and Communications Coordinator - Michael Butowicz
 	\begin{itemize}
 	\item Do necessary reserach for finalizing work
 	\item Coordinate information, tasks, and deadlines with subgroup
@@ -67,7 +68,7 @@
 	\item CC PI and Project Leader in all emails for external communications
 	\item Perform other such duties as the Project Leader or PI may specify
 	\end{itemize}
-\item Astrobiology Coordinator - Fre'Etta Brooks
+\item Astrobiology Coordinator - Jimish Patel
 	\begin{itemize}
 	\item Do necessary reserach for finalizing work
 	\item Coordinate information, tasks, and deadlines with subgroup
@@ -78,30 +79,12 @@
 	\item CC PI and Project Leader in all emails for external communications
 	\item Perform other such duties as the Project Leader or PI may specify
 	\end{itemize}
-\item Radiation Coordinator - Steven Oliver
+\item Radiation Coordinator - Taylor Hill
 	\begin{itemize}
 	\item Do necessary reserach for finalizing work
 	\item Coordinate information, tasks, and deadlines with subgroup
 	\item Approve work done by subsystem team
 	\item Write bimonthly updates along with detailed reports from subsytem meetings
-	\item Make detailed presentations, if necessary, for weekly team meetings
-	\item Report to project leader and PI with any project changes, issues encountered, and any external communications.
-	\item CC PI and Project Leader in all emails for external communications
-	\item Perform other such duties as the Project Leader or PI may specify
-	\end{itemize}
-\item RESU Lead Programmer - Kevin Portillo
-	\begin{itemize}
-	\item Do necessary reserach for finalizing work
-	\item Coordinate with team
-	\item Make detailed presentations, if necessary, for weekly team meetings
-	\item Report to project leader and PI with any project changes, issues encountered, and any external communications.
-	\item CC PI and Project Leader in all emails for external communications
-	\item Perform other such duties as the Project Leader or PI may specify
-	\end{itemize}
-\item MiniPIX Integration and Testing - Reed Masek
-	\begin{itemize}
-	\item Do necessary reserach for finalizing work
-	\item Coordinate with team and subsystem coordinator	
 	\item Make detailed presentations, if necessary, for weekly team meetings
 	\item Report to project leader and PI with any project changes, issues encountered, and any external communications.
 	\item CC PI and Project Leader in all emails for external communications
@@ -117,12 +100,10 @@
 	\item Perform other such duties as the Project Leader or PI may specify
 	\end{itemize}
 \end{itemize}
-		 
+
+
 \subsection{Timeline}
 \label{sec:Timeline}
-
-% Please add the following required packages to your document preamble:
-% \usepackage{graphicx}
 \begin{table}[H]
 \centering
 \caption{Timeline for the 2018 SORA 2.0 Mission}
@@ -148,17 +129,9 @@
 }
 \end{table}
 
+
 \subsection{Funding}
 \label{sec:Funding}
-Funding sources will be local contributions - applying for funding through the Physics Department, the College of Natural Science and Mathematics, The University of Houston Division of Research, and local organizations and companies willing to support this endeavor.  
 
-		
-		
-%\begin{figure}[!htb]
-%\begin{center}
-%\includegraphics[width=0.5\textwidth]{./Figures/Test.jpg}
-%\caption{This is a test figure.
-%}
-%\label{fig:Test} 
-%\end{center}
-%\end{figure}
+
+%Funding sources will be local contributions - applying for funding through the Physics Department, the College of Natural Science and Mathematics, The University of Houston Division of Research, and local organizations and companies willing to support this endeavor.  
