--- a/Sections/ThermalControl.tex
+++ b/Sections/ThermalControl.tex
@@ -1,20 +1,15 @@
 \section{Thermal Control Plan}
 \label{sec:TCP}
-Based on our previous mission~\cite{SORA}, we opted to have a similar thermal control plan but with a few changes.  To simplify the payload construction and control, we opted for an semi-autonomous temperature monitoring and control system.  
 
-The Arduino will monitor the pumps and other devices for overheating.  If the Arduino detects that a component, such as the pumps, then it will shut down the whole astrobiology system for a certain amount of time.
+
+Based on our previous mission~\cite{SORA}, we opted to have a similar thermal control plan but with a few changes.  To simplify the payload construction and control, we opted for an semi-autonomous temperature monitoring and control system.
+
+The Arduino will monitor the pumps and other devices for overheating. If the Arduino detects that a
+component, such as the pumps, then it will shut down the whole astrobiology system for a certain amount
+of time.
 
 In the case of our payload experiencing colder temperatures, all of our devices will be able to operate beyond expected temperatures on the flight. Based on our previous mission~\cite{SORA}, we found that heaters were unescessary and that insulation proved to be more than adequate.
 
 The temperature will be checked and recorded periodically for all devices, but it will not be downlinked.
 
 In order to manage the temperature of the  MiniPIX, it will be fitted with the same heatsink configuration as our 2017 flight. The internal temperature of the device will be recorded and downlinked to the flight control team at regular intervals. If the device is beginning to experience temperatures beyond what we would consider safe (above \SI{70}{\celsius}) we can either reset the RP3 controlling the MiniPIX or fully shutdown the entire radiation subsystem.
-
-%\begin{figure}[!htb]
-%\begin{center}
-%\includegraphics[width=0.5\textwidth]{./Figures/Test.jpg}
-%\caption{This is a test figure.
-%}
-%\label{fig:Test} 
-%\end{center}
-%\end{figure}
