Updated the introductory information. Added hypetheses and objectives.

--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -2,68 +2,76 @@
 \label{sec:Introduction}
 
 
-The 2019 University of Houston (UH) HASP team has set out to expand upon the previous missions \cite{SORA1}\cite{SORA2} by the UH team by applying the knowledge and technology that has accrued.
+The 2019 University of Houston (UH) HASP team has set out to expand upon the previous missions \cite{SORA1}\cite{SORA2} from the UH team by applying the knowledge and technology that has accrued.
 The methodology of the first two missions has provided a proof of concept for handling tools, such as the MiniPIX particle detector,  in extreme environments.
 This will serve as the platform for the 2019 mission.
 
-The main objectives of the 2019 mission is to study the exposure to ionizing radiation that organisms face in the upper atmosphere, and sample these organisms and bring them to the surface.
-The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere, in addition to humans that reside in such harsh environments.
-We will construct a mock-up International Space Station (ISS) module containing a scintillated MiniPIX.
-This allows us to study the particle cascades induced by the materials of the module, which will give information regarding the dose that astronauts are and will be exposed to during space flight.
-The payload will also contain a second MiniPIX that will reside outside of the ISS module, recording the outside radiation exposure.
+The main objectives of the 2019 mission is to study the exposure to ionizing radiation that organisms face in the upper atmosphere and sample these organisms and bring them to the surface.
+The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere.
+However, we are also interested in the humans that reside in such harsh environments.
+We will construct a thermally-controlled, pressurized mock-up International Space Station (ISS) module containing a scintillated MiniPIX.
+This allows us to study the particle cascades induced by the materials of the module, which will give information regarding the dose that astronauts are exposed to while in space.
+The payload will also contain a second, unscintillated MiniPIX that will reside outside of the ISS module, recording the outside radiation exposure.
 This second MiniPIX will act as a control for the ISS module, but also allows us to study the environment that extremophiles are exposed to.
-In tandem to the radiation study, we will collect samples of the microbial life through the use of a <<JIMISH EXPAND ON THIS>>. We will then bring the uncontaminated, collected samples down to the surface and analyze what was found.
+In addition to the MiniPIX, we will test the performance of organic photovoltaic cells in stratospheric conditions.
+Organic photovoltaic cells have promising applications for space-based missions due to their inexpensive, lightweight, and durable nature relative to their non-organic counterparts.
+In tandem to the radiation study, we will collect samples of the microbial life through the use of a passive collection system.
+This system will consist of a T-shaped arm covered with filters that will only be exposed to the outside while at float altitude.
+We will then bring the uncontaminated, collected samples down to the surface for analysis.
 
-The upcoming mission has the following scientific objectives:
+\noindent The upcoming mission has the following scientific objectives:
 
-{\bf Primary Scientific Objectives:}
-	\begin{enumerate}
-	\item Capture microorganisms in the upper atmosphere at altitudes of approximately \SIrange{30}{41}{\kilo\meter} using a method not previously used by the UH HASP team. 
-	\item Culture samples and compare them to the collection medium.
-	\item Study the cosmic and terrestrial radiation that extremophiles and astronauts are exposed to.
-	\end{enumerate}
-	
-{\bf Secondary Scientific Objectives:}
-	\begin{enumerate}
-	\item <<LIST ELECTRONICS OBJECTIVES.>>
-	\item Determine the polar angle of hits on the detector, compare them to payload orientation information and develop simulations to verify the results. <<THIS IS SOEMTHING WE MENTIONED LAST YEAR BUT DIDN'T CARRY OUT>>
-        \item Establish a methodology which allows two or more MiniPIX devices to be used in conjunction.
-	\item Testing the newly developed astrobiology hardware in flight and establish a more reliable method for collecting microbes in extreme environments at high-altitude.
-	\end{enumerate}
+\noindent \textbf {Primary Scientific Objectives:}
+\begin{enumerate}
+\item Capture microorganisms in the upper atmosphere at altitudes of approximately \SIrange{30}{41}{\kilo\meter} using a method not previously used by the UH HASP team. 
+\item Culture samples and compare them to the collection medium.
+\item Study the cosmic and terrestrial radiation that extremophiles and astronauts are exposed to.
+\end{enumerate}
+
+\noindent \textbf {Secondary Scientific Objectives:}
+\begin{enumerate}
+\item Testing the newly developed astrobiology hardware in flight and establish a more reliable method for collecting microbes in extreme environments at high-altitude.
+\item <<LIST ELECTRONICS OBJECTIVES.>>
+\item Establish a methodology which allows two or more MiniPIX devices to be used in conjunction.
+\item Study and test the performance of organic photovoltaic solar cells in the intense radiation environment.
+%\item Determine the polar angle of hits on the detector, compare them to payload orientation information and develop simulations to verify the results. <<THIS IS SOEMTHING WE MENTIONED LAST YEAR BUT DIDN'T CARRY OUT>>
+\end{enumerate}
+
+\noindent \textbf {Engineering Objectives:}
+\begin{enumerate}
+\item Develop a new astrobiology collection mechanism that is favorable at high altitude.
+\item Construct a module resembling an ISS module as accurately as possible.
+\item Use a scintillator to detect thermal neutrons using a MiniPIX.
+\item Analyze MiniPIX data in real time and downlink relevant information.
+\item Test an improved enclosure against impacts and harsh environments.
+\end{enumerate}
 
 
-{\bf Engineering Objectives}
-	\begin{enumerate}
-        \item Develop a new astrobiology collection mechanism that is favorable at high altitude.
-        \item Construct a module resembling an ISS module as accurately as possible.
-        \item Use a scintillator to detect thermal neutrons using a MiniPIX.
-	\item Analyze MiniPIX data in real time and downlink relevant radiation statistics.
-	\item Test an improved enclosure against impacts and harsh environments.
-	\end{enumerate}
-
-
-        
-%These goals and objectives are based on the following scientific questions: After confirming that microorganisms are present in the upper atmosphere in our last mission~\cite{SORA}, what extremophiles are present in the upper atmosphere at altitudes of 36 to 41 km?  If extremophiles are captured, can we culture the microorganisms?  What methods are more effective at capturing bacteria for culturing? Finally, with a deeper understanding of the MiniPIX after our first mission, can we collect more data to study cosmic radiation that microoganisms and spores are exposed to on a daily basis? Specifically, can we obtain useful information about the biological effectiveness of this radiation on bacteria through parameters such as linear energy transfer and dose equivalent? 
-
-<<BEGIN HERE>>
-        
 \subsection{Hypothesis and Objectives}
 \label{subsec:Hypothesis-Objectives}
 \begin{enumerate}
-\item Based on the collection results from previous missions such as SORA~\cite{SORA}, we predict the concentration of cells at an altitude of 36 km will be less than 500 cells per liter \citep{LSU}.
+\item By comparing our flight sample to previous missions \cite{SORA1}\cite{SORA2}, the newly developed passive astrobiology system can be quantitively and qualitatively be compated to previous methods.
   \begin{enumerate}
-  \item Objective: Sample a minimum volumetric amount of air at target altitude for the duration of the float phase (approximately 15 to 18 hours).
-	\end{enumerate}
-\item Based on control samples and testing before flight, we can compare our final flight results to previous applications.
-  \begin{enumerate}
-  \item Objective: Quantify and characterize any contamination with our laboratory and payload disinfection procedures.
-  \item Objective: Minimize the amount of external contamination before flight with thorough decontamination procedures.
+  \item Objective: Sample a comparatively larger volume of air while at float altitude.
+  \item Objective: <<JIMISH: EXPAND ON THIS?>>
   \end{enumerate}
-\item Based on measured results of dosage rates, the higher exposure to radiation may change the organism's cellular make-up.
+\item <<JIMISH: IDENTIFY HOW THE DECONTAMINATION PROCESS CAN BE IMPROVED>>
   \begin{enumerate}
-  \item Objective: Quantify the intensity and exposure of cosmic radiation for the duration of the flight.
+  \item Minimize outside contamination of the entire astrobiology system.
+  \item Objective: Retain a sterile environment for the entirety of the balloon flight.
+  \item Objective: Sample a minimum volumetric amount of air at target altitude for the duration of the float phase (approximately 15 to 18 hours).
+  \end{enumerate}
+\item The radiation environment within the ISS module will be noticeably different than that outside the module in terms of particle type and concentration. 
+  \begin{enumerate}
+  \item Objective: Characterize the radiation environment within the ISS module by particle types and dose.
+  \item Objective: Successfully identify neutron interaction with the scintillated MiniPIX.
   \item Objective: After capturing samples, analyze data and compare biological effects to similar genotypes found on Earth's surface.
   \end{enumerate}
+\item The organic photovoltaic cells exposed to stratospheric conditions will under perform cells which have remained on Earth.
+  \begin{enumerate}
+  \item Objective: Compare quantitative and qualitative properties of the cells such as fill factor, efficiency, and physical structure of post-flight cells to cells that have remained on Earth.
+  \item Objective: Using microscopy techniques, analyze the influence of stratospheric radiation on the structure of the cells.
+  \end{enumerate}
 \end{enumerate}
-
+  
 \vspace*{-0.5cm}
