Made several changes to Introduction and Radiation portions

--- a/Astrobiology/IntroAstro.tex
+++ b/Astrobiology/IntroAstro.tex
@@ -2,7 +2,6 @@
 \label{sec:AstrobiologyBackground}
 
 Extremophiles thrive in physically and/or chemically extreme conditions, which are detrimental to most of life on Earth as we know it. These organisms and microbes have been found everywhere, from deep underwater volcano vents to buried ice lakes in Antarctica \cite{Extremophiles}.  As shown in Table~\ref{tab:AstrobiologyTable}, fungi and bacterial spores have previously been found in the stratosphere. Arguably, each successful collection expedition of at least \SI{30}{\kilo\meter} into the upper atmosphere provides information that could be useful in determining what life forms can exist inside and outside of Earth's biosphere. Today, the most common altitude for bacterial collection in the atmosphere occurs in the range of approximately \SIrange{10}{20}{\kilo\meter} above Earth's surface; very little data exists on microbiological samples captured in the stratosphere. Conditions at altitudes of \SIrange{30}{40}{\kilo\meter} are extreme in temperature, pressure and radiation. 
-
 	
 %\begin{figure}[H]
 %\centering
@@ -11,14 +10,11 @@ Extremophiles thrive in physically and/or chemically extreme conditions, which a
 %\label{fig:AstroHist}
 %\end{figure} 
 
-
-
-
-Our experiment is an attempt to further develop our technique for capturing microorganisms in the upper atmosphere, as demonstrated during our 2017~\cite{SORA} flight; which was inspired by the LSU HASP 2011, 2012, 2013 flights~\cite{LSU} and from research by D.R. Canales~\cite{canales}.  This flight will help confirm the results from our first flight and potentially enable us to culture these rare microorganisms.  We will use two of the KNF N84-4 commercial gas-sampling diaphragm vacuum pumps to sample the air at approximately \SI{33}{\kilo\meter} above Earth's surface. The samples we hope to collect are an important part to expanding our understanding of Earth's biosphere. Further studies could provide more insight on how life can be distributed on Earth, and ultimately, through outer-space.
+Our experiment is an attempt to further develop our technique for capturing microorganisms in the upper atmosphere, as demonstrated during our 2017~\cite{SORA1} flight; which was inspired by the LSU HASP 2011, 2012, 2013 flights~\cite{LSU} and from research by D.R. Canales~\cite{Canales}.  This flight will help confirm the results from our first flight and potentially enable us to culture these rare microorganisms.  We will use two of the KNF N84-4 commercial gas-sampling diaphragm vacuum pumps to sample the air at approximately \SI{33}{\kilo\meter} above Earth's surface. The samples we hope to collect are an important part to expanding our understanding of Earth's biosphere. Further studies could provide more insight on how life can be distributed on Earth, and ultimately, through outer-space.
 
 \begin{table}[!ht]
   \centering
-  \caption{History of Microbiological Sampling of the stratosphere~\cite{SORA}.} 
+  \caption{History of Microbiological Sampling of the stratosphere~\cite{SORA1}.} 
   \bigskip
   \begin{tabular}{c c c p{6cm} c}
     \hline
@@ -31,8 +27,9 @@ Our experiment is an attempt to further develop our technique for capturing micr
     2004 & 20	   & Airplane, impactor surfaces 	        & \minitab{l}{}\par Bacillus luciferins, Bacillus sphaericus			                  & $Unknown$ \\ \hline
     2006 & 19 - 41 & Balloon, liquid neon cryopump              & \minitab{l}{7 cells L-1 (counting clumps), Bacillus sp.,}{Staphylococcus sp., Engyodontium sp.} & $19-81$   \\ \hline
     2007 & 20	   & Airplane, impactor surfaces 	        & \minitab{l}{Micrococci, Microbacteria,}{Staphylococcus sp., Brevibacterium sp.}    		  & $Unknown$ \\ \hline
-    2010 & 20	   & Airplane, impactor surfaces                & \minitab{l}{}\par Isolated Bacillus sp.							     	  & $Unknown$ \\ \hline
-    2017 & 32	   & Balloon, liquid medium w/ vacuum pump	& \minitab{l}{}\par Multiple findings~\cite{SORA}							  & $Unknown$ \\ \hline
+    2010 & 20	   & Airplane, impactor surfaces                & \minitab{l}{}\par Isolated Bacillus sp.							  & $Unknown$ \\ \hline
+    2017 & 32	   & Balloon, liquid medium w/ vacuum pump	& \minitab{l}{}\par Multiple findings~\cite{SORA1}					          & $Unknown$ \\ \hline
+    2018 & 32	   & Balloon, liquid medium w/ vacuum pump	& \minitab{l}{}\par Inconclusive~\cite{SORA2}							  & $Unknown$ \\ \hline
   \end{tabular}
   \label{tab:AstrobiologyTable}
   \medskip
