--- a/Bib.tex
+++ b/Bib.tex
@@ -1,6 +1,4 @@
 \newpage
-%\section{References}
-%\label{sec:References}
 
 \begin{thebibliography}{9}
 \bibitem{SORA1}
@@ -12,38 +10,47 @@ S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek,
 \bibitem{MiniPIX}
   MiniPIX - Miniaturized Portable USB Photon Counting Camera. (n.d.). Retrieved February 02, 2017, from \url{http://advacam.com/camera/minipix}.
 
+\bibitem{Regener}
+ Regener E. \& Pfotzer G., \textit{Vertical Intensity of Cosmic Rays by Threefold Coincidences in the Stratosphere.}, Nature 136, 718-719, (1935). 
+  
 \bibitem{LSU}
   Christner, B., Alleman, M., Bryan, N., Burke, S., Guzik, T.G., Granger, D., King, G. (2013) \textit{LSU HASP2013 PDF. Baton Rouge: Louisiana Space Consortium}.
-
-%\bibitem{SolidWorks}
-%  SolidWorks 3D CAD software \url{http://www.solidworks.com/}.
 
 \bibitem{Extremophiles}
   Extremophiles \href{http://www.nytimes.com/2013/02/07/science/living-bacteria-found-deep-under-antarctic-ice-scientists-say.html}{http://www.nytimes.com/2013/02/07/science/living-bacteria-found-deep-\\under-antarctic-ice-scientists-say.html}.
 
-\bibitem{canales}
+\bibitem{Frank}
+  Schröder, F. G. (2017). Radio detection of cosmic-ray air showers and high-energy neutrinos. Progress in Particle and Nuclear Physics, 93, 1-68. doi:10.1016/j.ppnp.2016.12.002
+
+\bibitem{GCRs}
+  https://helios.gsfc.nasa.gov/gcr.html
+
+\bibitem{NASA HRP}
+  https://www.nasa.gov/hrp
+  
+\bibitem{Canales}
  Canales D. C. and Ehteshami A., \textit{An attempt to sample atmospheric bacteria}, Houston, TX, 2015, January 11.
 
-\bibitem{bexus}
+\bibitem{Bexus}
 Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking on BEXUS stratospheric balloonflights. Nucl. Instrum. Methods A 633, S206-209.
-	
+
+\bibitem{Advacam}
+  ADVACAM at \url{advacam.com}.
+
+\bibitem{Medipix}
+  Medipix collaboration at \url{https://medipix.web.cern.ch/}.
+  
+\bibitem{StuartThesis} 22
+  George, S., \textit{Dosimetric Applications of Hybrid Pixel Detectors}, University of Wollongong, Australia, 2015.
+
 %\bibitem{uv_irradiance}
 %  Calculating the UV Index. (2016, October 14). Retrieved June 03, 2017, from \url{https://www.epa.gov/sunsafety/calculating-uv-index-0}.
 
 %\bibitem{cleanbox}
 % Clean box material \url{https://www.mcmaster.com/\#uhmw-polyethylene/=1aijn1p}.
 
-\bibitem{valve}
- Valve data sheet \url{http://www.generant.com/Literature/Series\%20VRV\%20Product\%20Literature.pdf}.
-
-\bibitem{advacam}
-  ADVACAM at \url{advacam.com}.
-
-\bibitem{medipix}
-  Medipix collaboration at \url{https://medipix.web.cern.ch/}.
-  
-\bibitem{stuartthesis} 22
-  George, S., \textit{Dosimetric Applications of Hybrid Pixel Detectors}, University of Wollongong, Australia, 2015.
+%\bibitem{Valve}
+ %Valve data sheet \url{http://www.generant.com/Literature/Series\%20VRV\%20Product\%20Literature.pdf}.
 
 %\bibitem{mpdatasheet}
 %  ADVACAM, \textit{MINIPIX Version 1.0 Datasheet}, Retrieved from \url{http://www.widepix.cz/files/datasheets/MiniPIX\%20v1.0\%20Datasheet.pdf}.
@@ -51,21 +58,14 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
 %\bibitem{mpjakubek}
 %  Jan Jakubek, \textit{Precise energy calibration of pixel detector working in time-over-threshold mode} Institute of Experimental and Applied Physics, Czech Technical University in Prague, Czech Republic, 2011.
   
-
-    
-
-
 %\bibitem{magnetictool}
 %  United States National Oceanic and Atmospheric Administration, \textit{Magnetic Field Calculators} [Data sets], Retrieved from \url{https://www.ngdc.noaa.gov/geomag-web/#igrfwmm}.
 
 %\bibitem{gorman}
 %	Gorman, J. (2013, February 06). \textit{Scientists Find Life in the Cold and Dark Under Antarctic Ice.} Retrieved September 15, 2016, from Scientists Find Life in the Cold and Dark Under Antarctic Ice.
-	
- 
  
 %\bibitem{pumpsource}
 %  \url{http://www.knfusa.com/?type=5600&amp;file=2079}.
-
 
 %\bibitem{Horneck}
 %  Horneck, G. 1993. The Biostack concept and its application in space and at accelerators: studies in Bacillus subtilis spores, p. 99-115. In C. E. Swenberg, G. Horneck, and E. G. Stassinopoulos (ed.), \textit{Biological effects and physics of solar and galactic cosmic radiation}[PDF], part A. Plenum Press, New York, NY. accessed 10/24/16  
@@ -81,21 +81,17 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
 
 %\bibitem{Kiefer}
 %Kiefer, J., K. Schenk-Meuser, and M. Kost. 1996. \textit{Radiation biology}[PDF], p. 300-367. In D. Moore, P. Bie, and H. Oser (ed.), Biological and medical research in space. Springer, Berlin, Germany. accessed 11/9/16
- 
+
+%\bibitem{SamURD}
+ % Alfonso Garcia Morelos, S. (2016, October 13).
+ % \textit{A Novel Microbe Trap.}
+ % Presentation at UH Undergraduate Research Day. \url{http://www.uh.edu/honors/undergraduate-research/}
+  
+%\bibitem{SamAPS}
+%	Alfonso Garcia Morelos, S. (2017, October 20).
+%	\textit{Stratospheric Organism and Radiation Analyzer}
+%	Retrieved October 20, 2017, from \textit{Bulletin of the American Physical Society}. \url{https://meetings.aps.org/Meeting/TSF17/Session/E5.3}
 	
-
-\bibitem{SamURD}
-	Alfonso Garcia Morelos, S. (2016, October 13).
-	\textit{A Novel Microbe Trap.}
-	Presentation at UH Undergraduate Research Day. \url{http://www.uh.edu/honors/undergraduate-research/}
-	
-	
-%\bibitem{StevenURD}
-
-%\bibitem{FreEttaWomensConference}
-
-%\bibitem{StevenSchoolPres}
-
 %\bibitem{StevenURD}
 %  Oliver, S. J. (2017, October 12). 
 %  \textit{Stratospheric Organism and Radiation Analyzer}
@@ -111,15 +107,4 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
 %  \textit{Stratospheric Organism and Radiation Analyzer}
 %  Presentation at Rice University, APS Conferences for Undergraduate Women in Physics (CUiP). \url{http://www.google.com/url?q=http%3A%2F%2Fwww.aps.org%2Fprograms%2Fwomen%2Fworkshops%2Fcuwip.cfm&sa=D&sntz=1&usg=AFQjCNE5pImV-SVrb87CvgAa9RSfeCrYXg}  
   
-%\bibitem{SamAPS}
-%	Alfonso Garcia Morelos, S. (2017, October 20).
-%	\textit{Stratospheric Organism and Radiation Analyzer}
-%	Retrieved October 20, 2017, from \textit{Bulletin of the American Physical Society}. \url{https://meetings.aps.org/Meeting/TSF17/Session/E5.3}
-	
-  
-%  \bibitem{MIT}
-%	MIT-Lemelson Award 2018.
-%	\url{https://lemelson.mit.edu/}
-  
-
 \end{thebibliography}
