--- a/Sections/Authors.tex
+++ b/Sections/Authors.tex
@@ -5,7 +5,7 @@
 
 
 %--- Add authors in the order they should appear
-\author{R.~B.~Masek}\affiliation{\Physics}
+\author{R.~Masek}\affiliation{\Physics}
 \author{J.~Patel}\affiliation{\Physics}
 \author{M.~Butowicz}\affiliation{\Electrical}
 \author{T.~Hill}\affiliation{\Physics}
