--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -31,19 +31,18 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \noindent \textbf {Secondary Scientific Objectives:}
 \begin{enumerate}
 \item Testing the newly developed astrobiology hardware in flight and establish a more reliable method for collecting microbes in extreme environments at high-altitude.
-\item <<LIST ELECTRONICS OBJECTIVES.>>
+\item <<Michael: List electronics objectives i.e. batteries, redundant storage mechanism, etc.>>
 \item Establish a methodology which allows two or more MiniPIX devices to be used in conjunction.
 \item Study and test the performance of organic photovoltaic solar cells in the intense radiation environment.
-%\item Determine the polar angle of hits on the detector, compare them to payload orientation information and develop simulations to verify the results. <<THIS IS SOEMTHING WE MENTIONED LAST YEAR BUT DIDN'T CARRY OUT>>
 \end{enumerate}
 
 \noindent \textbf {Engineering Objectives:}
 \begin{enumerate}
 \item Develop a new astrobiology collection mechanism that is favorable at high altitude.
-\item Construct a module resembling an ISS module as accurately as possible.
+\item Construct a structure resembling an ISS module as accurately as possible.
 \item Use a scintillator to detect thermal neutrons using a MiniPIX.
 \item Analyze MiniPIX data in real time and downlink relevant information.
-\item Test an improved enclosure against impacts and harsh environments.
+%\item Test an improved enclosure against impacts and harsh environments.
 \end{enumerate}
 
 
