Updated team roles and PW Budget.

--- a/Application.tex
+++ b/Application.tex
@@ -16,6 +16,7 @@
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
 \renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
 \newcommand{\hasplogo}{\includegraphics[width=0.08\linewidth]{Figures/logo.pdf}} %Header
+\setlength\extrarowheight{4pt}
 
 \makeatletter
 \def\p@subsection{}
