--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -30,7 +30,7 @@
 \hspace{1cm} \url{NA}\par
 \begin{figure}[!h]
   \begin{center}
-    \includegraphics[width=1\textwidth]{./Figures/RoleTree.pdf}
+    \includegraphics[width=1\textwidth]{./Figures/TeamRoleTree.pdf}
     \caption{Team role tree for the current SORA 2.0 UH team.}
     \label{fig:Roles} 
   \end{center}
