--- a/Sections/PWBudget.tex
+++ b/Sections/PWBudget.tex
@@ -7,30 +7,34 @@
   \caption{Power and weight budget for SORA 2.0} 
   \label{tab:budget}
   \bigskip
-  \begin{tabular}{|c|c|c|c|c|c|}
+  \begin{tabular}{cccccc}
     \hline
-    \multicolumn{1}{|c|}{\bfseries Component} & \multicolumn{1}{c|}{\bfseries Voltage (VDC)} &  \multicolumn{1}{c|}{\bfseries Current (mA)} & \multicolumn{1}{c|}{\bfseries Duty Cycle (\%)} & \multicolumn{1}{c|}{\bfseries Power (mW)} & \multicolumn{1}{c|}{\bfseries Weight (g)} \\
     \hline
-    30 to 12 V DC/DC Converter & 30 & 1500 & 100 & 45000 & 10 \\ \hline
-    MiniPIX~\ref{tab:Sensors} & & & & & \\ \hline
-    ISS Module Heater 1 with driver & & & & & \\ \hline
-    Pump 1 w/ Solenoid & 24 & 670 & 80 & 16080 & 1800 \\ \hline
-    Pump 2 w/ Solenoid & 24 & 670 & 80 & 16080 & 1800 \\ \hline
-    Temperature Sensor 1 & & & & & \\ \hline
-    %Polulu Driver & 30 & 1000 & CAL & CAL & 1 \\ \hline
-    %MiniPIX & 5 & 0.09 & 100 & 0.45 & 0.02 \\ \hline
+    \multicolumn{1}{c}{\bfseries Component} & \multicolumn{1}{c}{\bfseries Voltage (VDC)} &  \multicolumn{1}{c}{\bfseries Current (mA)} & \multicolumn{1}{c}{\bfseries Duty Cycle (\%)} & \multicolumn{1}{c}{\bfseries Power (mW)} & \multicolumn{1}{c}{\bfseries Mass (g)} \\
+    \hline
+    30 to 12 V DC/DC Converter & 30 & 1500 & 100 & 45000 & 10 \\
+    RPi + MiniPIX & 5 & 710 & 100 & 3550 & 25.2 + RPi \\    
+    ISS Module Heater 1 with driver & & & & & \\
+    Linear Actuator & 12 & 650 & 20 & 7800 & 84 \\
+    Servo Motor & 6 & 550 & & 3300 & 39 \\
+    Gyroscope & 5 & 3.9 & 100 & 19.5 & \\
+    Temperature Sensor 1 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
+    Temperature Sensor 2 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
+    Temperature Sensor 3 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
+    Altitude/Pressure Sensor & 3.6 & 1.4 & 100 & 5.04 & \\
+    Low Pressure Pressure Sensor & 5 & 7 & 100 & 35 & \\   
+    
+    %Polulu Driver & 30 & 1000 & CAL & CAL & 1 \\ \hline  
     %Pressure \& Altitude Sensor 1 & 3.3 & 1.4 & 100 & 4.62 & 0.005 \\ \hline
     %Real Time Clock (RTC) & 3.3 & 0 & 100 & 0.00198 & 0.005 \\ \hline
     %GPS & 3.3 & 41 & 100 & 135.3 & 0.005 \\ \hline
     %Real Time Clock (RTC) & 3.3 & 0 & 100 & 0.00198 & 0.005 \\ \hline
     %Humidity Sensor & 3.3 & 0.5 & 100 & 1.65 & 0.0025 \\ \hline
-    Structure w/ bolts & N/A & N/A & N/A & N/A & 5000 \\ \hline
-    Total & 30 & 1.74 (peak) & 100 & 45000 & 18764 \\ \hline
+    Structure w/ bolts & N/A & N/A & N/A & N/A & 5000 \\
+    \hline
+    \textbf{Total} & \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{} \\
+    \hline
+    \hline
   \end{tabular}
   \medskip
 \end{table}
-
-
-% \subsubsection{Powering It All Up}
-
-
