--- a/Electronics/DesignElectronics.tex
+++ b/Electronics/DesignElectronics.tex
@@ -3,13 +3,17 @@
 
 \subsubsection{Overview}
 
-For this mission, we will again use RESU (Real-Time Environmental Sensing Unit), our flight computer to manage flight operations and send and receive commands from the ground. RESU is composed of two components: a Raspberry Pi 3 (RP3) and an Arduino Mega (Arduino) which interface via USB. The RESUs primary purpose during the flight will be to monitor environmental conditions and control the astrobiology systems. It will monitor temperature of the various subsystems and the humidity and pressure of the environment throughout the flight. All recorded data will continuously be written to an SD card mounted on a shield on top of the Arduino. It will also accept discrete commands from the HASP systems to turn the astrobiology collection system on and off.
+For this mission, we will again use RESU (Real-Time Environmental Sensing Unit), our flight computer to manage flight operations and send and receive commands from the ground. RESU is composed of two components: a Raspberry Pi 3 (RP3) and an Arduino Mega (Arduino) which interface via USB. The RESUs primary purposes during the flight will be to monitor environmental conditions inside the payload structure and inside the ISS module model and to control the astrobiology system. It will monitor temperature of the various subsystems including the solar cells, astrobiology collection system, MiniPix, and air pressure throughout the flight. Temperature of each of the 12 solar cells will be monitored by an individual thermistor. The voltage produced by each cell will also be monitored and recorded by the RESU via the Arduino. The RESU will use an accelerometer to confirm the activated state of the astrobiology system. All recorded data will continuously be written to an SD card mounted on a shield on top of the Arduino and to a removable USB flash drive connected to the raspberry pi. The RESU will by programmed to deploy the astrobiology system at the appropriate altitude as sensed by the atmospheric pressure sensors. The RESU will also accept discrete commands from the HASP systems to turn the astrobiology collection system on and off and to return the operation status of the astrobiology system.
 
+\iffalse
  During our last flight we only had one mechanism for storing data with no redundancy. This means that if one of our storage devices had been damaged or corrupted during flight, all of our data would have been lost. In order to harden our payload and ensure the safety of our data we will now store redundant copies of our data. One will be stored on the SD card directly on the Arduino and the other will be transferred to the RP3 for storage.
+\fi  
+
+In order to maintain data integrity we will save the data recorded by the RESU to both the SD card of the Arduino and to the USB drive connected to the Raspberry Pi. Data will be written to a discrete data file for a given period of time and then the filename will be incremented and the following data will be written to a new file. In case the data collection process is corrupted for a given period of time, this period of corruption will not interfere with the collection of all previous data. 
 
 \subsubsection{The Sensors}
 
-Our payload will utilize eight thermistors to measure temperature at various points in our payload. The decision to use thermistors was based primarily on the performance of the analog temperature sensors during our 2017 flight, during which several of those sensors had slight malfunctions. Thermistors are able to accurately measure temperature in the range \SIrange{-55}{125}{\celsius} and should therefore be adequate for the conditions in the stratosphere. Pressure will be recorded from two identical digital pressure sensors in order to ensure accuracy and should be able to record accurately in the range \SIrange{0}{14000}{\milli\bara}. Finally, humidity will be measured from a basic analog humidity sensor. All sensor data will be UTC timestamped via the onboard real time clock and recorded to the SD card.
+Our payload will utilize 16 thermistors to measure temperature at various points in our payload. The decision to use thermistors was based primarily on the performance of the analog temperature sensors during our 2017 flight, during which several of those sensors had slight malfunctions, and the success of thermistors in our 2018 flight. Thermistors are able to accurately measure temperature in the range \SIrange{-55}{125}{\celsius} and should therefore be adequate for the conditions in the stratosphere. Pressure will be recorded from two digital pressure sensors, one low pressure sensor in the main payload structure which will record pressure in the range \SIrange{0}{3.44}{\kilo\pascal} and the second pressure sensor will be located inside the ISS module and record pressure in the range \SIrange{20}{110}{\kilo\pascal}. All sensor data will be UTC timestamped via the onboard real time clock and recorded to the SD card on the Arduino and USB drive attached to the Raspberry PI. To confirm the activated status of the astrobiology collection system, an accelerometer will be used to detect whether the collection arm is spinning or parked as is appropriate for the altitude of the payload. Each solar cell will also be monitored for temperature to aid in the calculation of efficiency of each cell. One MiniPix will be located inside the ISS module and an additional MiniPix will be located inside the main structure of the payload.
 
 \begin{table}[h!]
 \centering
@@ -20,16 +24,16 @@ Our payload will utilize eight thermistors to measure temperature at various poi
 \hline
 \multicolumn{1}{|c|}{\bfseries Sensor} & {\bfseries Quantity} & {\bfseries Platform} & {\bfseries Purpose} \\
 \hline
-    Temperature Sensors         		& 6 & Arduino  		& Record temperature measurements  \\ \hline
-    Pressure        				& 2 & Arduino 		& Record pressure measurements \\ \hline
-    Inertial Measurement Unit       		& 1 & RP3    		& Record IMU Data in 9 degrees of freedom \\ \hline    
+    Temperature          		& 16 & Arduino  		& Record temperature measurements  \\ \hline
+    Pressure (\SIrange{0}{3.44}{\kilo\pascal})        				& 1 & Arduino 		& Record lower pressure measurements \\ \hline
+    Pressure (\SIrange{20}{110}{\kilo\pascal})        				& 1 & Arduino 		& Record higher pressure measurements \\ \hline
+    Accelerometer       		& 1 & RP3    		& Report the activation state of astrobiology system \\ \hline    
     Real Time Clock 				& 2 & Arduino/RP3 	& Record temperature compensated timestamps in CT \\\hline
-    Humidity        				& 1 & Arduino 		& Record atmospheric humidity levels \\ \hline
-    MiniPIX         				& 1 & RP3     		& Cosmic ray detector \\ \hline
+    MiniPIX         				& 2 & RP3     		& Cosmic ray detector \\ \hline
 \end{tabular}
 \end{table}
 
 
 \subsubsection{Space Constraints}
-Since much of the space inside of our payload will be taken up by the pumps and clean box from the astrobiology systems, we need to design our electronics to be relatively compact. We will again only use one RP3 to both interface with MiniPIX and store sensor data from the Arduino.  Also, in order to reduce the space required for the interface between the Arduino and all of the payload's sensors, we will use two layers of proto-shields to more effectively utilize vertical space. The RTC, pressure and humidity sensors will be mounted directly on the first shield while the temperature sensors will be mounted on the top most shield. 
+Since half of the space inside the payload will be used by the astrobiology systems, we need to design our electronics to be relatively compact yet accessible for necessary modifications or repairs after testing. We will use one RP3 to both interface with two MiniPIX and store sensor and voltage data from the Arduino.  Also, in order to reduce the space required for the interface between the Arduino and all of the payload's sensors, we will use two layers of proto-shields to more effectively utilize vertical space. The RTC, pressure and humidity sensors will be mounted directly on the first shield while the temperature sensors will be mounted on the top most shield. 
 
