--- a/Electronics/RESUdesign.tex
+++ b/Electronics/RESUdesign.tex
@@ -7,9 +7,9 @@ For this mission, we will again use RESU (Real-Time Environmental Sensing Unit),
 
 \iffalse
  During our last flight we only had one mechanism for storing data with no redundancy. This means that if one of our storage devices had been damaged or corrupted during flight, all of our data would have been lost. In order to harden our payload and ensure the safety of our data we will now store redundant copies of our data. One will be stored on the SD card directly on the Arduino and the other will be transferred to the RP3 for storage.
-\fi
+\fi  
 
-In order to maintain data integrity we will save the data recorded by the RESU to both the SD card of the Arduino and to the USB drive connected to the Raspberry Pi. Data will be written to a discrete data file for a given period of time and then the filename will be incremented and the following data will be written to a new file. In case the data collection process is corrupted for a given period of time, this period of corruption will not interfere with the collection of all previous data.
+In order to maintain data integrity we will save the data recorded by the RESU to both the SD card of the Arduino and to the USB drive connected to the Raspberry Pi. Data will be written to a discrete data file for a given period of time and then the filename will be incremented and the following data will be written to a new file. In case the data collection process is corrupted for a given period of time, this period of corruption will not interfere with the collection of all previous data. 
 
 \subsubsection{The Sensors}
 
@@ -27,7 +27,7 @@ Our payload will utilize 16 thermistors to measure temperature at various points
     Temperature          		& 16 & Arduino  		& Record temperature measurements  \\ \hline
     Pressure (\SIrange{0}{3.44}{\kilo\pascal})        				& 1 & Arduino 		& Record lower pressure measurements \\ \hline
     Pressure (\SIrange{20}{110}{\kilo\pascal})        				& 1 & Arduino 		& Record higher pressure measurements \\ \hline
-    Accelerometer       		& 1 & RP3    		& Report the activation state of astrobiology system \\ \hline
+    Accelerometer       		& 1 & RP3    		& Report the activation state of astrobiology system \\ \hline    
     Real Time Clock 				& 2 & Arduino/RP3 	& Record temperature compensated timestamps in CT \\\hline
     MiniPIX         				& 2 & RP3     		& Cosmic ray detector \\ \hline
 \end{tabular}
@@ -35,19 +35,20 @@ Our payload will utilize 16 thermistors to measure temperature at various points
 
 
 \subsubsection{Space Constraints}
-Since half of the space inside the payload will be used by the astrobiology systems, we need to design our electronics to be relatively compact yet accessible for necessary modifications or repairs after testing. We will use one RP3 to both interface with two MiniPIX and store sensor and voltage data from the Arduino.  Also, in order to reduce the space required for the interface between the Arduino and all of the payload's sensors, we will use two layers of proto-shields to more effectively utilize vertical space. The RTC, pressure and humidity sensors will be mounted directly on the first shield while the temperature sensors will be mounted on the top most shield.
+Since half of the space inside the payload will be used by the astrobiology systems, we need to design our electronics to be relatively compact yet accessible for necessary modifications or repairs after testing. We will use one RP3 to both interface with two MiniPIX and store sensor and voltage data from the Arduino.  Also, in order to reduce the space required for the interface between the Arduino and all of the payload's sensors, we will use two layers of proto-shields to more effectively utilize vertical space. The RTC, pressure and humidity sensors will be mounted directly on the first shield while the temperature sensors will be mounted on the top most shield. 
 
  \subsubsection{Powering It All Up}
 
- In order to stay within the power constraints, a robust power supply will need to  handle all the components of the payload.  The power supply we will be using is the PCM-DC-AT500 by WinSystems INC.  It offers one \SI{+5}{\volt} needed to power the payload's electronics.  This power supply could effectively take \SI{+30}{\volt} and step it up to the \SI{+12}{\volt} and \SI{+6}{\volt} outputs as needed. The power supply will also be able to step down to the \SI{+3.6 }{\volt} output as needed for sensors. One of the \SI{+12}{\volt} outputs goes to the Arduino since it can step down to the appropriate voltages internally while the other goes to a linear actuator for the astrobiology collection arm. Thermistors and pressure sensors will also receive power through the Arduino. A remaining \SI{+5 }{\volt} output is converted to a USB power cable for the RP3.
+ In order to stay within the power constraints, a robust power supply will need to  handle all the components of the payload.  The power supply we will be using is the PCM-DC-AT500 by WinSystems INC.  It offers one \SI{+5}{\volt} needed to power the payload's electronics.  This power supply could effectively take \SI{+30}{\volt} and step it up to the \SI{+12}{\volt} and \SI{+6}{\volt} outputs as needed. The power supply will also be able to step down to the \SI{+3.6 }{\volt} output as needed for sensors. One of the \SI{+12}{\volt} outputs goes to the Arduino since it can step down to the appropriate voltages internally while the other goes to a linear actuator for the astrobiology collection arm. Thermistors and pressure sensors will also receive power through the Arduino. A remaining \SI{+5 }{\volt} output is converted to a USB power cable for the RP3. 
  %more research needed regarding plans to ground components
- %The power supply also has four ground outputs that will be used by each respective component.
+ %The power supply also has four ground outputs that will be used by each respective component. 
 
+\subsection{RESU Downlink Packets}
 
-Listing~\ref{Downlinks} is a sample of our proposed downlink data packet, data is included to the demonstrate expected number of characters but should not be considered expected or actual values. Included first is a format sample to enhance readability in this application which will not be included in the actual downlink data stream.
+Listing~\ref{Downlinks} is a sample of our proposed downlink data packet, values are included to the demonstrate expected number of characters but should not be considered expected or actual values. Included first is a format sample to enhance readability in this application which will not be included in the actual downlink data stream.
 
 \lstset{basicstyle=\small, numbers=left, xleftmargin=2em, frame=tb, label = Downlinks, framexleftmargin=1.5em}
-\begin{lstlisting}[caption = Sample of proposed downlink data packets ID: 15667 - 15670]
+\begin{lstlisting}[caption = Sample of proposed downlink data packets ID: 15667 - 15669]
 <Format Sample>
 begin_packet
 |ID Number|Raspberry Pi Temp|MiniPix 0 Temp|MiniPix 1 Temp|ISS Temp|ISS Pressure
@@ -89,13 +90,13 @@ end_packet
 
 Each packet of data will be delimited by keywords \verb|begin_packet| and \verb|end_packet| so that parsing each file be easier.  During our previous flights, these data packets were crucial status updates to the state of our payload.  We will once again use them for the same purpose to keep a close eye on our payload.
 
-This year the data packets will contain information about the readings from temperatures on crucial devices such as the Raspberry Pi and MiniPix sensors, as well as temperature and pressure inside the ISS module, and accelerometer $x, y, z$ values of the sample collection arm. Additionally packets will contain values regarding the temperature, fill factor, and efficiency of each of the solar cells.
+This year the data packets will contain information about the readings from temperatures on crucial devices such as the Raspberry Pi and MiniPix sensors, as well as temperature and pressure inside the ISS module, and accelerometer $x, y, z$ values of the sample collection arm. Additionally packets will contain values regarding the temperature, fill factor, and efficiency of each of the solar cells.  
 
-The first integer represents the ID of the packet.  Following the packet ID are temperature readings of the Raspberry Pi and both MiniPix, temperature and pressure within the ISS Module, astrobiology collection arm accelerometer $x, y, z$ values. Then follows the set of values for each of the twelve solar cells, which include the index, temperature, fill factor and efficiency of the cell. Included before the closing delimiter is the timestamp in $HH$:$MM$:$SS$ $MM$/$DD$/$YY$ at which the packet was written.
+The first integer represents the ID of the packet.  Following the packet ID are temperature readings of the Raspberry Pi and both MiniPix, temperature and pressure within the ISS Module, astrobiology collection arm accelerometer $x, y, z$ values. Then follows the set of values for each of the twelve solar cells, which include the index, temperature, fill factor and efficiency of the cell. Included before the closing delimiter is the timestamp in $HH$:$MM$:$SS$ $MM$/$DD$/$YY$ at which the packet was written.  
 
 
 
-In addition to downlinking sensor data, we also want to downlink serial uplink commands as shown in listing \ref{Uplinks}.
+In addition to downlinking sensor data, we also want to downlink serial uplink commands as shown in listing \ref{Uplinks}.  
 
 \lstset{basicstyle=\small, numbers=left, frame=tb, linewidth=11.5cm, xleftmargin=.4\textwidth, label = Uplinks}
 \begin{lstlisting}[caption = Sample of received uplink commands in downlinked packets in SORA 2017~\cite{SORA}]
@@ -112,4 +113,6 @@ Received Command: 71
 \end{lstlisting}
 \medskip
 
-Each line within a received uplink command represents the string of bytes that will be read by our payload.  The last line of the listing shows what command will be parsed and processed by RESU.  Table \ref{tab:All-Commands} shows all the possible commands that we are expecting to process.
+Each line within a received uplink command represents the string of bytes that will be read by our payload.  The last line of the listing shows what command will be parsed and processed by RESU.  Table \ref{tab:All-Commands} shows all the possible commands that we are expecting to process. 
+
+
