--- a/Sections/HASPInterface.tex
+++ b/Sections/HASPInterface.tex
@@ -44,9 +44,9 @@ During the duration of our flight the serial uplink commands will be used to con
 
 \subsection{Interfacing with HASP: EDAC and DB9 Connections}
 
-The power supply unit (PSU) will use a +30V and ground line from the EDAC connection.  Each pump will use a pair of +30V and ground lines respectfully.  The last available pair of +30V and ground line will be used to power the solenoids.  The pumps and solenoids will be wired to a relay which is controlled from the Arduino. 
+The power supply unit (PSU) will use a +30V and ground line from the EDAC connection. The linear actuator of the collection system will use +12V and the collection arm servo motor will take a +6V connection. Other Sensors will be powered through the Arduino taking +5V through the previously described USB connection.  
 
-We will use discrete commands in this mission.  Two of the commands will be used to turn the astrobioly system on and off.  This is only in case of emergency if we notice that the system is not responding to our serial commands.  The other two discrete channels will be used to turn on and off the power of RESU in case that we notice an issue.
+We will use discrete commands in this mission.  Two of the commands will be used to deploy and retract the astrobiology system.  This is only in case of emergency if we notice that the system has not already deployed at the planned altitude as designed. The other two discrete channels will be used to turn on and off the power of RESU in case that we notice an issue.
 
 \begin{table}[!ht]
   \centering
@@ -57,56 +57,13 @@ We will use discrete commands in this mission.  Two of the commands will be used
     \multicolumn{1}{c|}{\bfseries Command} & \multicolumn{1}{c|}{\bfseries Purpose} &  \multicolumn{1}{c|}{\bfseries EDAC Pin} & \multicolumn{1}{c}{\bfseries Description} \\
       \hline
       \hline
-      Discrete 1 & Astro. System ON & f & Initiates the pumps and collection systems \\
-      Discrete 2 & Astro. System OFF & n & Shuts down the pumps and causes collection systems to retract \\
+      Discrete 1 & Astro. System ON & f & Extends collection arm and activates rotation \\
+      Discrete 2 & Astro. System OFF & n & Stops collection arm rotation and retracts arm \\
       Discrete 3 & RESU ON & h & Powers up RESU \\
       Discrete 4 & RESU OFF & p & Shuts down RESU \\
   \end{tabular}
   \medskip
 \end{table}
 
-\subsection{Interfacing with HASP: Serial Downkink}
-For the duration of the flight the serial downlink will be used to downlink the temperature and other various radiation statistics that will be computed directly on the RP\num{3} as data is collected. It will also be used to downlink messages regarding the status of the payload, the command uplink status and error messages. The data packets will be human readable so they can be analyzed directly as they are received from HASP. The packets will be delineated by new lines and we will use a simple one character header to differentiate between data packets and message packets. The format of the packets is still potentially subject to change but the preliminary design is outlined below.
-
-
-
-\begin{table}[!ht]
-\centering
-\caption{Data Packet Format} 
-\label{tab:DataPacket}
-\bigskip
-\begin{tabular}{|c|c|}
-\hline
-\multicolumn{1}{|c|}{\bfseries Data} & \multicolumn{1}{c|}{\bfseries Size (bytes)}\\
-\hline
-    d						& 2		\\ \hline 
-    MiniPIX Temperature 			& 6		\\ \hline
-    Dose Rate					& 6		\\ \hline %two pumps now
-    Average Counts   				& 5		\\ \hline
-    Newline					& 1		\\ \hline
-    Total Packet Size				& 20 bytes		\\ \hline
-    
-\end{tabular}
-\medskip
-\end{table}
-
-\begin{table}[!ht]
-\centering
-\caption{Message Packet Format} 
-\label{tab:DataPacket}
-\bigskip
-\begin{tabular}{|c|c|}
-\hline
-\multicolumn{1}{|c|}{\bfseries Data} & \multicolumn{1}{c|}{\bfseries Size (bytes)}\\
-\hline
-    m						& 2		\\ \hline 
-    Message Size 				& 6		\\ \hline
-    Message					& String of length Message Size		\\ \hline %two pumps now
-    Newline					& 1		\\ \hline
-    Total Packet Size				& Variable		\\ \hline
-    
-\end{tabular}
-\medskip
-\end{table}
-
-
+\subsection{Interfacing with HASP: Serial Downlink}
+For the duration of the flight the serial downlink will be used to downlink the temperature and other various statistics that will be computed directly on the RP\num{3} as data is collected. It will also be used to downlink messages regarding the status of the payload, the command uplink status and error messages. The data packets will be human readable so they can be analyzed directly as they are received from HASP. The packets will be delimited by keywords \verb|begin_packet| and \verb|end_packet| and we will use a simple one character header to differentiate between data packets and message packets. The format of the packets is potentially subject to change but the current design is outlined in listing~\ref{Downlinks} .
